changes' is much more useful than 'misc edits' or 'code cleanup.'
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

CRE: read and write 'setwhen' quest support, no modification for now.
Nicolas Weeger 2010-06-03

server/quest.c, quest step conditions, used to advance quests when another
quest(s) are at the 'right' step(s)
Brendan Lally 2010-05-30

server/quest.c, #define the state numbers in the quest parsing code
Brendan Lally 2010-05-30

Use a specific message to query animation state, fix isn't enough.
Nicolas Weeger 2010-05-30

Fix crash in cfanim.
Nicolas Weeger 2010-05-30

Change log level to error for various things in cf_anim.
Nicolas Weeger 2010-05-30

New variable to cf_anim. Enable object state querying (using 'fix')
to know if an object is animated.
Nicolas Weeger 2010-05-30

CRE: don't hardcode pre and post conditions files.
Nicolas Weeger 2010-05-30

CRE: add 'npctoken' and 'setnpctoken' pre and post conditions.
Nicolas Weeger 2010-05-30

Add DM 'purge_quest_state' command to make it easy to fix quest state
through manual file editing without restarting server.
Nicolas Weeger 2010-05-30

CRE: enable message rule reordering.
Nicolas Weeger 2010-05-30

CRE: expand resource tree if only one item.
Nicolas Weeger 2010-05-29

CRE: enable new message file creation.
Nicolas Weeger 2010-05-29

CRE: enable message rule addition or removal.
Nicolas Weeger 2010-05-29

Fix CRE crash when not enough reply data.
Nicolas Weeger 2010-05-29

Disable cf_darcap's plugin handleDeath function, replaced by a Python script.
Nicolas Weeger 2010-05-29

Expose 'Map.InsertAround' to Python.
Nicolas Weeger 2010-05-29

Remove unused "oldmessage" parameter from draw_ext_info, draw_ext_info_format,